<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_content"
    android:orientation="vertical"
    tools:context=".photography.profile.view.ProfileAboutFragment">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSaveAboutMe"
        android:layout_marginVertical="@dimen/margin_content"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/first_name"
                android:hint="@string/first_name"
                android:inputType="text" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etLastName"
                android:inputType="text"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/last_name" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:hint="@string/email_address"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email_address" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etCity"
                android:hint="@string/city"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/city" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etPhoneNumber"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/phone_number" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tell_us_about"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etAboutMePhotographer"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/about_me"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_border"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:autofillHints="@string/tell_us_about" />

        </LinearLayout>

    </ScrollView>

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnSaveAboutMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_content"
        android:background="@drawable/button_disabled"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

</androidx.constraintlayout.widget.ConstraintLayout>